2006-01-10  Martin Blom  <martin@blom.org>

	* Released ahi.device 6.7.

	* ahi.device: It should now be possible to send more than two
	buffers at the same time when using CMD_WRITE (for
	tripple-buffering or more). [Ralph Schmidt]

2005-12-21  Martin Blom  <martin@blom.org>

	* Device/devcommands.c (StartCmd): While I thought I set the task
	pri to +128, I actually set it to -128. Now it's +127 as it should
	have been. [Davy Wentzler]

2005-12-19  Martin Blom  <martin@blom.org>

	* Device/device.c (_DevOpen): Fail if unit >= 4 but not 255. [Chr]

2005-12-05  Martin Blom  <martin@blom.org>

	* Added 'make install' targets (mostly like it is in AROS).

2005-11-28  Martin Blom  <martin@blom.org>

	* AHI Preferences, AHI-Handler, AddAudioModes, ahi.device, all
	open-source drivers, PlayTest, CloneAudioModes,
	PlaySineEverywhere, ScanAudioModes, Test-7.1: Added tag "[AHI
	release x.y]" to version string. [Jeff Gilpin]

	* AddAudioModes, AHI-Handler, CAMD/emu10kx, CloneAudioModes,
	HardDiskRecord, PlaySineEverywhere, Test-7.1: Recent versions of
	gcc optimized away the embedded version string. Fixed. [Jeff
	Gilpin]

2005-11-20  Martin Blom  <martin@blom.org>

	* Released AHI 6.0. w00t!

2005-11-06  Martin Blom  <martin@blom.org>

	* Docs/readme.changes: Added note about device.audio's 20 ms
	limit. [Ian Greenway]

2005-10-09  Martin Blom  <martin@blom.org>

	* Drivers/Common/library.h: Avoid using assembly symbol
	redirection in AROS.

2005-10-05  Martin Blom  <martin@blom.org>

	* Docs/readme.changes, Docs/readme.usr: Updated.

2005-10-01  Martin Blom  <martin@blom.org>

	* COPYING.DRIVERS: Fixed a typo and added a small plea for open
	source drivers.

2005-09-28  Martin Blom  <martin@blom.org>

	* Bumped just about every single revision counter ...

	* Drivers/Common/Makefile.common.in: Arranged to that the
	"library.o" object comes first when linking, so that the _start()
	function is at the very beginning of the driver. [Gunther Nikl]
